base/src/test/resources/failure/levels/too-many-levels.aya.txt
In file $FILE:2:17 ->

  1 | ulevel u
  2 | struct Lift (A : Prop u) : Prop (lsuc u)
                       ^----^
  3 |  | value : A
  
Error: Expected 0 level(s)
Desugaring interrupted due to error(s).
What are you doing?
